<resources>
    <string name="app_name">成</string>
    <string name="add_data">添加数据</string>
    <string name="brand_name">品牌</string>
    <string name="please_brand">请输入品牌</string>
    <string name="mode">型号</string>
    <string name="please_mode">请输入型号</string>
    <string name="color">颜色</string>
    <string name="please_color">请输入颜色</string>
    <string name="save">保存</string>
    <string name="prod_name">商品名</string>
    <string name="prod_price">价格</string>
    <string name="create_time">入库日期</string>
    <string name="submit">添加</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="prod_coding">商品编码</string>
    <string name="scan_code">扫码</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="select">查询</string>
    <string name="no_data">无数据</string>
</resources>
